# breakwater

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
experiments/oracle/: bunfig.toml  index.html  index.ts  package.json  server.js  tsconfig.json
experiments/oracle/browser/: api.ts  index.html  index.ts  styles.css
experiments/oracle/plugins/: security.ts
experiments/oracle/secure/: crypto.ts  params.ts
experiments/oracle/shared/: types.ts
manifests/: astx.yaml
research/: analyze_key_expansion.py  analyze_key_setup.py  analyze_seed_cipher.py  analyze_seed_decrypt.py  astx-certificate-verification-bypass.md  astx-config-shell-injection.txt  astx-environment-variable-extraction.txt  astx-http-api-router.txt  astx-ipc-shell-injection.txt  astx-mac-address-forgery-detection.md  calls.txt  config_xml_structure.txt  embedded_ssl_certificate_vulnerability.md  get_pclog_vulnerability_analysis.txt  status.md
research/brainstorm/: ahnlab_seed_analysis.md  astx-config-encryption.txt  astx-custom-seed.txt  astx-daemon-startup-process.txt  astx-monitor-alive-system.txt  astx-network-components.txt  astx-spyware-exfiltration.txt  astx-ui-archaeology.md  capability-matrix.md  compare_sboxes.py  detection-bypass.txt  explain_analysis.py  exploits.txt  extension_stealth_strategies.md  legality.txt  network-isolation-requirements.md  packages.txt
research/explorer/: app.mjs  index.html
research/explorer/data/: graph.json
research/notebooks/: coverage_and_significance.py
runtime/extension/: package.json  pnpm-lock.yaml  wxt.config.ts
runtime/extension/entrypoints/: background.ts  content.ts
runtime/extension/entrypoints/popup/: App.css  App.tsx
runtime/extension/lib/: config.ts  handlers.ts  message-handlers.ts  modes.ts  redirect-rules.ts  webvm-handler.ts
runtime/extension/types/: cheerpx.d.ts
runtime/webvm-proxy/: README.md  index.html  server.js  webvm-proxy.js
src/breakwater/: __init__.py  catalog.py  cli.py  download.py  manifest.yml  package.py  package_manager.py  scan_dmg.py
src/breakwater/catalog/: __init__.py  advanced.py  core.py  deduplication.py  exporter.py  stats.py  stats.txt  visualization.py
src/breakwater/package/: __init__.py  core.py  manager.py
targets/astx/: .gitignore  Makefile
targets/astx/platform/: Dockerfile  make-request.sh  request-handler.sh  run-astx  start-server.sh
targets/astx/platform/shims/lib/: Makefile  connection_spoof.c  exec_tracer.c
targets/astx/platform/shims/src/lib/: Makefile  netlink_shim.c  procexe.c
targets/astx/tools/: analyze_seedcipher_pattern.py  astx-crypto.py  crypto_helpers.py  custom_seed.py  custom_seed_ghidra.py  debug_seed_step_by_step.py  decrypt.py  decrypt_configs.py  decrypt_log_file.py  extract_embedded_certs.py  package_analyze.sh  recover_setcert_simple.py  send_sec_msg.py  serve_payload.py  starter_ply_linux.html  starter_ply_linux_plain.html  tail_encrypted_logs.py  utils.py
